# hf-multitask-trainer

./: .gitignore  .style.cfg  LICENSE  README.md  build.sh  pyproject.toml  setup.cfg  setup.py  test_trainer.py
hf_mtask_trainer/: __init__.py  mixins.py  state.py  trainer.py  types.py
